--- a/style.css
+++ b/style.css
@@ -8,19 +8,20 @@
 
 body {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 12px;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     width: 384px;
     height: 384px;
 }
 
-.container * {
+.box {
     border: 1px solid black;
-    width: 24px;
-    height: 24px;
+    flex: 1;
 }
