--- a/style.css
+++ b/style.css
@@ -25,14 +25,12 @@ body {
 }
 
 .mainframe {
-    position: relative;
-    right: 3vw;
+    margin: auto;
     display: flex;
     gap: 12px;
 }
 
 .controls {
-    
     margin-top: 6px;
 }
 
