--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
     width: 384px;
     height: 384px;
     background-color: white;
-    
+    font-size: 128px;
+    color: white;
 }
 
 .mainframe {
