--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     width: 384px;
     height: 384px;
     background-color: white;
+    font-family: "Segoe UI", sans-serif;
     font-size: 128px;
     color: white;
 }
