--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    font-family: system-ui, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,25 +22,58 @@ body {
     width: 384px;
     height: 384px;
     background-color: white;
-    font-family: "Segoe UI", sans-serif;
+    font-family: "Segoe UI";
     font-size: 128px;
     color: white;
+    border-radius: 10%;
+    overflow: hidden;
 }
 
 .mainframe {
     margin: auto;
     display: flex;
-    gap: 12px;
+    gap: 24px;
 }
 
 .controls {
-    margin-top: 6px;
+    position: relative;
+    max-height: 384px;
 }
 
-.controls > * {
+.controls-actions > * {
     display: block;
     margin: auto;
     margin-bottom: 8px;
+}
+
+.controls-actions {
+    position: relative;
+    bottom: 125px;
+    overflow: auto;
+}
+
+.controls-body {
+    position: relative;
+    background-color: rgb(218, 219, 209);
+    min-height: 84px; /* retarded i know */
+    max-height: 84px;
+}
+
+.controls-top,
+.controls-bottom {
+    min-height: 150px; /* border.. */
+    min-width: 150px;
+    background-color: rgb(218, 219, 209);
+}
+
+.controls-top {
+    border-top-left-radius: 25%;
+    border-top-right-radius: 25%;
+}
+
+.controls-bottom {  
+    border-bottom-left-radius: 25%;
+    border-bottom-right-radius: 25%;
 }
 
 .box {
