--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* bro doesnt know (literally) what is responsive design so 
+*  he decided to hardcode every fucking
+*  unit to fuck himself up in the future! 💀 */
+
 *,
 *::before,
 *::after {
@@ -6,27 +10,32 @@
     padding: 0;
 }
 
+:root {
+    --border-color: 8px solid rgb(144, 59, 175);
+}
+
 body {
     font-family: system-ui, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: radial-gradient(lightgrey, rgb(150, 150, 150));
+    background: linear-gradient(rgb(33, 0, 60), rgb(5, 0, 9));
     height: 100vh;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 384px;
-    height: 384px;
+    width: 400px;
+    height: 400px;
     background-color: white;
     font-family: "Segoe UI";
     font-size: 128px;
     color: white;
     border-radius: 10%;
     overflow: hidden;
+    border: var(--border-color);
 }
 
 .mainframe {
@@ -37,7 +46,7 @@ body {
 
 .controls {
     position: relative;
-    max-height: 384px;
+    max-height: 400px;
 }
 
 .controls-actions > * {
@@ -55,8 +64,10 @@ body {
 .controls-body {
     position: relative;
     background-color: rgb(218, 219, 209);
-    min-height: 84px; /* retarded i know */
-    max-height: 84px;
+    min-height: 100px; /* retarded i know */
+    max-height: 100px;
+    border-left: var(--border-color);
+    border-right: var(--border-color);
 }
 
 .controls-top,
@@ -64,16 +75,20 @@ body {
     min-height: 150px; /* border.. */
     min-width: 150px;
     background-color: rgb(218, 219, 209);
+    border-left: var(--border-color);
+    border-right: var(--border-color);
 }
 
 .controls-top {
     border-top-left-radius: 25%;
     border-top-right-radius: 25%;
+    border-top: var(--border-color);
 }
 
 .controls-bottom {  
     border-bottom-left-radius: 25%;
     border-bottom-right-radius: 25%;
+    border-bottom: var(--border-color);
 }
 
 .box {
